Partial reorganization (#51)
* Partial reorganization, remove duplicated code, restore api descriptions, update tests.

* Bugfix: Change output FITS file parameter name.

* Make abbreviations consistent.

* Fix test.

* Restore commented out code.
